@@ -117,7 +117,7 @@ class Patch(Artist):
     def set_hatch(self, h):
         """
         Set the hatching pattern
- 
+
         hatch can be one of:
         /   - diagonal hatching
         \   - back diagonal
@@ -137,7 +137,7 @@ class Patch(Artist):
         2. Hatching is done with solid black lines of width 0.
         """
         self._hatch = h
- 
+
     def get_hatch(self):
         'return the current hatching pattern'
         return self._hatch
@@ -450,9 +450,9 @@ class FancyArrow(Polygon):
         """Returns a new Arrow.
 
         length_includes_head: True if head is counted in calculating the length.
-        
+
         shape: ['full', 'left', 'right']
-        
+
         overhang: distance that the arrow is swept back (0 overhang means
         triangular shape).
 
@@ -502,7 +502,7 @@ class FancyArrow(Polygon):
             sx = float(dy)/distance
             M = array([[cx, sx],[-sx,cx]])
             verts = matrixmultiply(coords, M) + (x+dx, y+dy)
-        
+
         Polygon.__init__(self, map(tuple, verts), **kwargs)
 
 
@@ -531,11 +531,11 @@ class PolygonInteractor:
       't' toggle vertex markers on and off.  When vertex markers are on,
           you can move them, delete them
 
-      'd' delete the vertex under point      
+      'd' delete the vertex under point
 
       'i' insert a vertex at point.  You must be within epsilon of the
           line connecting two existing vertices
-          
+
     """
 
     showverts = True
@@ -550,16 +550,16 @@ class PolygonInteractor:
         x, y = zip(*self.poly.verts)
         self.line = Line2D(x,y,marker='o', markerfacecolor='r')
         #self._update_line(poly)
-        
+
         cid = self.poly.add_callback(self.poly_changed)
         self._ind = None # the active vert
 
         canvas.mpl_connect('button_press_event', self.button_press_callback)
-        canvas.mpl_connect('key_press_event', self.key_press_callback)        
+        canvas.mpl_connect('key_press_event', self.key_press_callback)
         canvas.mpl_connect('button_release_event', self.button_release_callback)
-        canvas.mpl_connect('motion_notify_event', self.motion_notify_callback)                
+        canvas.mpl_connect('motion_notify_event', self.motion_notify_callback)
         self.canvas = canvas
-        
+
 
     def poly_changed(self, poly):
         'this method is called whenever the polygon object is called'
@@ -567,13 +567,13 @@ class PolygonInteractor:
         vis = self.line.get_visible()
         Artist.update_from(self.line, poly)
         self.line.set_visible(vis)  # don't use the poly visibility state
-        
+
 
     def get_ind_under_point(self, event):
         'get the index of the vertex under point if within epsilon tolerance'
         x, y = zip(*self.poly.verts)
-        
-        # display coords        
+
+        # display coords
         xt, yt = self.poly.get_transform().numerix_x_y(x, y)
         d = sqrt((xt-event.x)**2 + (yt-event.y)**2)
         indseq = nonzero(equal(d, amin(d)))
@@ -583,10 +583,10 @@ class PolygonInteractor:
             ind = None
 
         return ind
-        
+
     def button_press_callback(self, event):
         'whenever a mouse button is pressed'
-        if not self.showverts: return 
+        if not self.showverts: return
         if event.inaxes==None: return
         if event.button != 1: return
         self._ind = self.get_ind_under_point(event)
@@ -609,10 +609,10 @@ class PolygonInteractor:
             if ind is not None:
                 self.poly.verts = [tup for i,tup in enumerate(self.poly.verts) if i!=ind]
                 self.line.set_data(zip(*self.poly.verts))
-        elif event.key=='i':            
+        elif event.key=='i':
             xys = self.poly.get_transform().seq_xy_tups(self.poly.verts)
             p = event.x, event.y # display coords
-            for i in range(len(xys)-1):                
+            for i in range(len(xys)-1):
                 s0 = xys[i]
                 s1 = xys[i+1]
                 d = dist_point_to_segment(p, s0, s1)
@@ -620,13 +620,13 @@ class PolygonInteractor:
                     self.poly.verts.insert(i+1, (event.xdata, event.ydata))
                     self.line.set_data(zip(*self.poly.verts))
                     break
-                
-            
+
+
         self.canvas.draw()
 
     def motion_notify_callback(self, event):
         'on mouse movement'
-        if not self.showverts: return 
+        if not self.showverts: return
         if self._ind is None: return
         if event.inaxes is None: return
         if event.button != 1: return
