@@ -1,3 +1,8 @@
+2006-05-23 Changed color handling so that collection initializers
+           can take any mpl color arg or sequence of args; deprecated
+           float as grayscale, replaced by string representation of
+           float. - EF
+
 2006-05-19 Fixed bug: plot failed if all points were masked - EF
 
 2006-05-19 Added custom symbol option to scatter - JDH
